Changes made for navbar on mobile (responsive web des.), as well as fixed alignment issues in the catalog page for cards

--- a/styles.css
+++ b/styles.css
@@ -3,20 +3,19 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* main {
-    margin: 20px;
+ /* main {
+    margin-top: 4rem;
 } */
 
 /*  navbar   */
 #navbar {
   width: 100%;
+  /* position: fixed;
+  top: 0; */
 }
 
 #navbar ul {
     list-style-type: none;
-    /* background-color: #C3D7D4; */
-    /* background: linear-gradient(90deg, #ffffff 20%, #007eed 20% 40%,
-        #522dae 40% 60%, #f40000 60% 80%, #ffffff 80% 100%); */
     background: linear-gradient(90deg, #ffffff, #007eed, #522dae, #f40000, #ffffff);
     overflow: hidden;
     padding: 0px;
@@ -30,34 +29,26 @@ body {
 #navbar a {
     text-decoration: none;
     color: black;
-    padding: 15px;
+    padding: 0.60rem 0.75rem;
+    margin: 0.20rem 0.50rem;
     display: block;
     text-align: center;
 }
 
 #navbar a:hover {
-    /* background-color: #91b6b0; */
     background-color: rgba(255, 255, 255, 0.25);
-    border: 3px solid rgba(255, 255, 255, 0.5);
+    border: 2px solid rgba(255, 255, 255, 0.5);
 }
 
 #navbar-logo {
-    /*  to remove pattened background   */
-    border-radius: 75%;
+    border-radius: 75%;      /*  to remove pattened background   */
     width: 50px;
     height: 50px;
     padding-right: 15px;
 }
 
-/*  main home page image with welcome text   */
-/* #container-home-page {
-    position: relative;
-    text-align: center;
-    color: white;
-    width: 100%;
-    height: 50%;
-} */
 
+/*  main home page image with welcome text   */
 .hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("images/bmw-home-page.jpg");
     background-color: #cccccc;
@@ -65,7 +56,6 @@ body {
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
-    /* position: relative; */
     background-position: center;
 }
 
@@ -73,50 +63,37 @@ body {
   text-align: center;
   position: absolute;
   left: 50%;
-  top: 250px;
+  top: 35%;
   transform: translate(-50%, -50%);
   color: white;
 }
 
 .hero-text h1{
-  font-size: 5rem;
+  font-size: 6rem;
   margin-bottom: 0;
 }
 
 .hero-text h3{
   font-size: 2rem;
 }
-/* #container-home-page h1{
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 5rem;
-}
-
-#container-home-page h3{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 2rem;
-} */
 
 
 /*  contact us page form    */
-main div {
+#contact {
     margin-top: 20px;
-    width: 100%;
+    width: 40%;
     height: 20%;
     background-color: #C3D7D4;
+    margin: 0 auto;
+    border-radius: 10px;
 }
 
 form {
-    width: 60vw;
-    max-width: 500px;
-    min-width: 300px;
+    width: 80%;
+    /* max-width: 500px; */
+    /* min-width: 300px; */
     margin: 0 auto;
-    padding-bottom: 2em;
+    padding: 1em 0 2em 0;
 }
 
 fieldset {
@@ -129,6 +106,7 @@ label {
     display: block;
     margin: 0.5rem 0;
     font-size: 1rem;
+    font-weight: bold;
 }
 
 input, textarea {
@@ -139,6 +117,7 @@ input, textarea {
 
 textarea {
     margin-bottom: 0px;
+    resize: none;
 }
 
 #contact-text, #about-text {
@@ -164,10 +143,10 @@ textarea {
 }
 
 
-/*Car items CATALOG */
+/*Car items catalog page */
 
 .car-list {
-    width: 450px;
+    width: 100vw;
     /* background-color: #1b1b32; */
   }
   /* .car-list {
@@ -192,8 +171,9 @@ textarea {
     background-color: #C3D7D4;
     display: flex;
     flex-direction: column;
-    row-gap: 8px;
-    padding: 8px 9px;
+    row-gap: 1rem;
+    /* padding: 8px 9px; */
+    padding: 1rem 1rem;
     visibility: visible;
     justify-content: start;
     list-style: none;
@@ -201,7 +181,7 @@ textarea {
     border: solid 2px #91b6b0;
     box-shadow: 2.5px 5px #91b6b0;
     border-radius: 10px;
-    margin: 20px auto;
+    margin: 1.5rem auto;
   }
 
   .image-flex {
@@ -214,10 +194,10 @@ textarea {
   }
 
   .image-flex p {
-    margin-left: 10px;
+    margin-left: 1rem;
     margin-top: 0;
 
-    font-size: 25px;
+    font-size: 1.75rem;
     font-weight: bold;
   }
 
@@ -225,27 +205,16 @@ textarea {
     text-decoration: none;
   }
 
+  /* .car-item iframe {
+    width: 100%;
+    height: 50vh;
+  } */
   iframe {
-    width: 600px;
-    height: 400px;
+    width: 100%;
+    height: 50vh;
   }
 
-    /* Cards for car list in catalog */
-
-  /* #car-item {
-    width: 90vw;
-    height: 20vh;
-    background-color: cornsilk;
-    border: solid 2px black;
-    border-radius: 10px;
-    margin: 5px auto;
-    //  padding: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 10px;
-  } */
-
+  /* selected car from catalog */
   #car-model-info {
     width: 90vw;
     height: 100%;                  
@@ -255,8 +224,8 @@ textarea {
     background-color: #C3D7D4;
     display: flex;
     flex-direction: column;
-    row-gap: 8px;
-    padding: 8px 9px;
+    row-gap: 1rem;
+    padding: 1rem 1rem;
     visibility: visible;
     justify-content: start;
     list-style: none;
@@ -264,22 +233,71 @@ textarea {
     border: solid 2px #91b6b0;
     box-shadow: 2.5px 5px #91b6b0;
     border-radius: 10px;
-    margin: 20px auto;
+    margin: 1.5rem auto;
   }
 
 
 
 
   /* Responive web design for mobile devices currently */
-  @media screen and (max-width: 769px) {
+  @media screen and (min-width: 320px) and (max-width: 769px) {
+    /* navbar */
+    #navbar a {
+      padding: 0.25rem;
+      margin: 15 0.5 15px 0.5;
+    }
+
+    #navbar-logo {
+      width: 30px;
+      height: 30px;
+      padding-right: 5px;
+    }
+
+    /* index */
     .hero-image {
       background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("images/bmw-mobile-background.jpg");
-      background-color: #cccccc;
-      width: 100vw;
-      height: 100vh;
-      background-repeat: no-repeat;
-      background-size: cover;
-      /* position: relative; */
       background-position: center;
+    }
+
+    .hero-text h1{
+      font-size: 3rem;
+    }
+    
+    .hero-text h3{
+      font-size: 1rem;
+    }
+
+    /* catalog */
+    .car-item {
+      padding: 0.5rem 0.5rem;
+      margin: 1rem 0 1rem 0;
+    }
+
+    .image-flex p {
+      font-size: 1rem;
+    }
+
+    .car-info {
+      padding: 0.5rem 0.5rem;
+      margin: 1rem auto;
+    }
+
+    /* contact us */
+    #contact {
+      width: 85%;
+    }
+
+    #car-list-item {
+      width: 80vw;                
+    }
+
+    #car-model-info {
+      width: 80vw;            
+    }
+  }
+
+  @media screen and (min-width: 770px) and (max-width: 1300px) {
+    #contact {
+      width: 60%;
     }
   }
